# smoll-widgets

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  premake5.lua  smoll-widgets.sublime-project
backends/sdl2_cairo/: CMakeLists.txt  sdl2_cairo_backend.c  sdl2_cairo_backend.h  sdl2_cairo_example.c
backends/win32_cairo/: CMakeLists.txt  win32_cairo_backend.c  win32_cairo_backend.h  win32_cairo_example.c
backends/win32_cairo/cairo-windows-1.17.2/lib/x86/: cairo.lib
include/: backend.h  backend_api.h  base_widget.h  command_buffer.h  events.h  internal_context.h  internal_events.h  macros.h  smoll_context.h  types.h
include/widgets/: box.h  button.h  checkbox.h  flex_column_view.h  flex_row_view.h  flex_view.h  label.h  list_view.h  progress_bar.h  scrollbar.h  split.h  split_view.h  toggle.h  view.h
log-boii/: log_boii.c  log_boii.h
scripts/linux/: build_sdl2_cairo_example_debug.sh  build_sdl2_cairo_example_release.sh  build_smoll_widgets_debug.sh  format_code.sh  gen_makefiles.sh
scripts/macos/: build_and_run_sdl2_cairo_example_debug.sh  build_and_run_sdl2_cairo_example_release.sh  build_smoll_widgets_release.sh  clean.sh
scripts/windows/: build_and_run_debug.bat  build_and_run_sdl2_cairo_example.bat  build_and_run_sdl2_cairo_example_debug.bat  build_and_run_sdl2_cairo_example_release.bat  build_and_run_win32_cairo_example_debug.bat  build_and_run_win32_cairo_release.bat  build_sdl2_cairo_example_debug.bat  build_sdl2_cairo_example_release.bat  build_smoll_widgets_debug.bat  build_smoll_widgets_release.bat  build_win32_cairo_example_debug.bat  build_win32_cairo_example_release.bat  clean.bat  format_code.bat  gen_makefiles.bat  vscode_build_and_run_debug.bat  vscode_build_and_run_release.bat
src/: base_widget.c  command_buffer.c  internal_context.c  smoll_context.c
src/widgets/: box.c  button.c  checkbox.c  flex_column_view.c  flex_row_view.c  flex_view.c  label.c  list_view.c  progress_bar.c  scrollbar.c  split.c  split_view.c  toggle.c  view.c
